--- a/myproject/src/index.css
+++ b/myproject/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 2%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,6 +11,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.cont{
+  width: 200px;
 }
 .prikaz{
   display: flex;
@@ -32,4 +36,24 @@ code {
   color: whitesmoke;
   margin: 0 auto;
   margin-top: 10px;
+}
+.red{
+  background-color: red;
+  width: 150px;
+  text-align: center;
+  padding: 6px;
+  margin-bottom: 10px;
+}
+.green{
+  background-color: green;
+  width: 150px;
+  text-align: center;
+  padding: 6px;
+  margin-bottom: 10px;
+}
+.header-container{
+  position: sticky;
+}
+.stats{
+  width: 550px;
 }
