--- a/myproject/src/index.css
+++ b/myproject/src/index.css
@@ -20,17 +20,27 @@ code {
 .cont{
   width: 200px;
 }
+.compare-form{
+  display: flex;
+}
 .prikaz{
   display: flex;
   justify-content: center;
+  background: rgba(212, 211, 196, 0.205);
+  border-radius: 5%;
 }
 .player{
-  width: 30%;
+  width: 50%;
+  margin: 10px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 20px;
 }
 
 .West{
   background-color: rgb(209, 40, 40);
-  width: 200px;
+  width: 210px;
   color: whitesmoke;
   margin: 0 auto;
   padding: 5px;
@@ -40,7 +50,7 @@ code {
 }
 .East{
   background-color: rgb(0, 2, 107);
-  width: 200px;
+  width: 210px;
   color: whitesmoke;
   margin: 0 auto;
   margin-top: 10px;
@@ -59,6 +69,7 @@ code {
 .wrappera{
   width: 960px;
   margin: 0 auto;
+  display: flex;
 }
 .header-container{
   width: 960px;
@@ -70,7 +81,10 @@ code {
   display: flex;
 }
 .stats{
-  width: 550px;
+  width: 600px;
+  margin: 0 auto;
+  margin-top: 50px;
+  color: white;
 }
 .gamess{
   height: 40px;
@@ -131,16 +145,15 @@ code {
   margin-left: 25px;
 }
 .table-best{
-  width: 600px;
+  width: auto;
+  margin-left: 20px;
+  height: 10px;
   padding: 15px;
   border-radius: 20px;
   color: white;
-  background-color: rgba(212, 211, 196, 0.205);
   font-size: 20px;
-  position: relative;
-  left: 450px;
-  top: -650px;
 }
+
 .prof-pic{
   width: 100px;
   border-radius: 50%;
@@ -165,4 +178,62 @@ code {
 }
 .search-user{
   margin: 30px;
+}
+.form-group{
+  width: 600px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.form-group > h4 {
+  color: white;
+}
+.form-control{
+  margin-bottom: 10px;
+}
+tr, td{
+  color: white;
+}
+.table{
+    background-color: rgba(212, 211, 196, 0.205);
+}
+#logout{
+  width: 300px;
+  margin: 0 auto;
+  color: white;
+  font-size: 20px;
+  margin-top: 50px;
+  background: rgba(212, 211, 196, 0.205);
+  padding: 40px;
+  border-radius: 8%;
+}
+.btn-dark, .btn-danger{
+  margin: 3px;
+}
+
+#comp{
+  height: 38px;
+  margin: 0 5px 0 5px;
+}
+.navigation{
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.navigation p{
+  color: white;
+  font-size: 50px;
+  width: 250px;
+}
+.welcome{
+  margin: 0 auto;
+  width: 400px;
+  text-align: center;
+  font-size: 30px;
+  color: aliceblue;
+}
+.span-uvecano{
+  font-weight: 600;
+  font-size: 37;
+  color: blueviolet;
 }
